--- a/components/ComponentRenderer/component.css
+++ b/components/ComponentRenderer/component.css
@@ -24,5 +24,5 @@
 
 .component-card {
   overflow: visible;
-  /* border: 1px solid rgba(0, 0, 255, 0.25); */
+  border: 1px solid rgba(0, 0, 0, 0.25);
 }
